#39 fix jvm options for JDK11